# py_neuromodulation

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Fall school Notebook_1_Tasks.ipynb  Fall school Notebook_2_Tasks.ipynb  Fall school Notebook_3.ipynb  LICENSE  README.md  README.rst  RMAP.html  api_documentation.html  artifacts.html  bandpower.html  bandpower.py  bids_settings.json  bispectra.html  bursts.html  channels.html  check_stream_init_new.py  coherence.html  contributing.html  database.html  decode.html  define_M1.py  env.yml  env_bsl.yml  env_realtime_decoding.yml  environment.yaml  environment.yml  environment_doc.yml  example_BIDS.ipynb  example_fooof.ipynb  example_stream_mne_lsl.py  examplestemp_raw.fif  feature_reader.html  figure_25_correlated_pkg_all_scores.py  figure_28_boxplot_regions.py  figure_31_how_much_data_is_needed.py  (+119 more)
Experiments/: AssignBrainRegionSiibra.py  BayOpt_run_cross_val.py  Berlin_EMGtoBinary.py  Brain_regionAnalysisSelection.py  CEBRA_PYTORCH.py  CSVfromCoefdict.py  ChannelFeatureAnalysis.py  Check_in_burst.py  CleanEmptyRunsNPY.py  CleanEmptyRunsNPY_keepsubs.py  CreateCSVfromCEBRADict.py  CreateCSVfromDict.py  Divide_in_brainRegion.py  Examine CEBRA_performance.py  ExperimentMultichannel.py  FeatAroundMovOnset.py  FeatureCoeffAnalysis.py  Feature_extractor.py  LogresVSCebra.py  LogresVSLogresOLD.py  OptimalOffset.py  R_score_script.py  R_score_script_CEBRAWITHIN.py  R_score_script_ECOGLFP.py  R_score_script_LFPECOG.py  R_score_script_SFS.py  SelfSampling.py  Train_Val_Test_Split.py  WithinVSAcross.py  fftvsallCebra.py  good_vs_bad_performers.py  run_cross_val_Logres.py  run_cross_val_cebra.py  run_cross_val_cebra_Baseline.py  run_cross_val_cebra_PYTORCH.py  run_cross_val_cebra_PYTORCH_Captum.py  run_cross_val_cebra_PYTORCH_Class.py  run_cross_val_cebra_PYTORCH_ECOGLFP.py  run_cross_val_cebra_REGIONDEV.py
Tutorial ML with py_neuro/: Tasks_part1.ipynb  Tasks_part2.ipynb
_modules/: index.html  nm_IO.html  nm_bursts.html  nm_coherence.html  nm_decode.html  nm_define_nmchannels.html  nm_features.html  nm_filter.html  nm_fooof.html  nm_generator.html  nm_hjorth_raw.html  nm_kalmanfilter.html  nm_linelength.html  nm_mne_connectivity.html  nm_nolds.html  nm_normalization.html  nm_oscillatory.html  nm_plots.html  nm_projection.html  nm_rereference.html  nm_resample.html  nm_run_analysis.html  nm_settings.html  nm_sharpwaves.html  nm_stats.html  nm_stream.html  nm_stream_abc.html
_sources/: RMAP.rst.txt  api_documentation.rst.txt  channels.rst.txt  coherence.rst.txt  contributing.rst.txt  database.rst.txt  decode.rst.txt  fooof.rst.txt  generator.rst.txt  gui.rst.txt  hjorth.rst.txt  index.rst.txt  installation.rst.txt  linelength.rst.txt  logging.rst.txt  mne_filter.rst.txt  mnelsl_stream.rst.txt  nm_bursts.rst.txt  nm_coherence.rst.txt  nm_decode.rst.txt  nm_filter.rst.txt  nm_generator.rst.txt  nm_linelength.rst.txt  nm_mne_connectivity.rst.txt  nm_nolds.rst.txt  nm_normalization.rst.txt  nm_oscillatory.rst.txt  nm_plots.rst.txt  nm_rereference.rst.txt  nm_run_analysis.rst.txt  nm_settings.rst.txt  nm_sharpwaves.rst.txt  nm_stream_abc.rst.txt  nm_stream_offline.rst.txt  nolds.rst.txt  normalization.rst.txt  notch_filter.rst.txt  oscillatory.rst.txt  plots.rst.txt  projection.rst.txt  (+6 more)
across_patient_decoding/: grid_cortex.tsv
auto_examples/: index.html  plot_0_first_demo.html  plot_1_example_BIDS.html  plot_2_example_add_feature.html  plot_3_example_sharpwave_analysis.html  plot_4_example_gridPointProjection.html  plot_5_example_rmap_computing.html  plot_6_real_time_demo.html  plot_7_lsl_example.html  plot_8_cebra_example.html  sg_execution_times.html
classification/: MotOnsetPred_baseline_correct_labels.py  MotOnsetPred_calculate-features_Beijing.ipynb  MotOnsetPred_classify_LR.py  MotOnsetPred_classify_all_classifiers_2021-06-09.py  MotOnsetPred_classify_all_classifiers_20210609.py  MotOnsetPred_classify_all_classifiers_pipeline-MotOnsetPred_2021-04-26_rereference-ECOG.py  MotOnsetPred_compare_classifiers.py  MotOnsetPred_compare_norm_no-norm.ipynb  MotOnsetPred_compare_performance_classifiers.ipynb  MotOnsetPred_load-features_Beijing_no_clip.ipynb  MotOnsetPred_load-features_Berlin_no_norm.ipynb  MotOnsetPred_mne_tf.ipynb  MotOnsetPred_plot_features.py  MotOnsetPred_predict_movement_20210630.py  classification.py  emg.py  ieeg.py
decoding_settings/: nm_channels_feat.csv  nm_settings_feat.json  saga_config_sensight_lfp_left.xml
docs/: .buildinfo  FeatureEstimationDemo.html  FeatureEstimationDemo.ipynb  IO.html  ParametrizationDefinition.html  ParametrizationDefinition.ipynb  Untitled.html  bandpower.html  environment.yml  example_BIDS.html  example_BIDS.ipynb  example_gridPointProjection.html  example_gridPointProjection.ipynb  example_normalization.html  example_normalization.ipynb  example_rereferencing.html  example_rereferencing.ipynb  example_sharpwave_analysis.html  example_sharpwave_analysis.ipynb  examples.html  features.html  fft.html  filter.html  first_demo.html  first_demo.ipynb  genindex.html  hjorth_raw.html  index.html  installation.html  introduction.html  kalmanfilter.html  nm_BidsStream.html  nm_IO.html  nm_RealTimeClientStreamSingleProcess.html  nm_analysis.html  nm_bandpower.html  nm_decode.html  nm_feature_abc.rst  nm_features.html  nm_filter.html  (+33 more)
examples/: 0408_analyzefeatures.py  0408_plot_raw.py  Introductiono.ipynb  README.rst  analyze_example_trace_LM_XGB.py  cohort_wrapper.py  createSimulatedData.py  debug_decoding.py  debug_normalization.py  est_features_BEIJING.py  est_features_PGH.py  example.ipynb  example_BIDS.ipynb  example_BIDS.py  example_BIDS_cohorts.py  example_BIDS_test_None_reref.py  example_DL.py  example_ML.py  example_RealTimeClient.py  example_SimulatedData.ipynb  example_across_patient_decoding.ipynb  example_cebra_decoding.html  example_cebra_decoding.ipynb  example_decodingML.ipynb  example_decodingML_featureEstimation.py  example_externalMLModel.ipynb  example_featureExploration.ipynb  (+49 more)
gui_dev/data_processor/: Cargo.toml
gui_dev/data_processor/src/: lib.rs
(+960 files in other folders)
