[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "py_neuromodulation"
version = "0.06dev"
authors = [{ name = "Timon Merk", email = "timon.merk@charite.de" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

description = "Real-time analysis of intracranial neurophysiology recordings."
keywords = [
  "real-time",
  "eeg",
  "ieeg",
  "dbs",
  "ecog",
  "electrocorticography",
  "deep-brain-stimulation",
  "machine-learning",
]

license = { file = "LICENSE" }
maintainers = [{ name = "Timon Merk" }]
readme = "README.rst"
requires-python = ">=3.11"

dependencies = [
  "mne",
  "filterpy >= 1.4.5",
  "fooof",
  "imbalanced-learn",
  "matplotlib>=3.9.0",
  "mne-bids >= 0.8",
  "mne-connectivity",
  "mrmr_selection",
  "nolds",
  "numpy >= 1.21.2",
  "pandas >= 2.0.0",
  "scikit-image",
  "scikit-learn >= 0.24.2",
  "scikit-optimize",
  "scipy >= 1.7.1",
  "seaborn >= 0.11",
  "pybispectra>=1.2.0",
  "pyparrm",
  "pyarrow>=14.0.2",
  "joblib>=1.3.2",
  "hatch>=1.9.4",
  "statsmodels",
  "mne-lsl>=1.2.0",
  "pynput",
  "pyqt5",
  "pydantic>=2.7.3",
  "pywebview",
  "fastapi",
  "uvicorn>=0.30.6",
  "websockets>=13.0",
  "seaborn >= 0.11",
  "cbor2>=5.6.4",
]

[project.optional-dependencies]
test = ["pytest>=8.0.2", "pytest-xdist"]
dev = [
  "ruff",
  "pytest>=8.0.2",
  "pytest-cov",
  "pytest-sugar",
  "notebook",
  "watchdog",
]
docs = [
  "py-neuromodulation[dev]",
  "sphinx",
  "recommonmark",
  "sphinx",
  "numpydoc",
  "sphinx-gallery",
  "pydata-sphinx-theme",
  "sphinx_togglebutton",
]

[project.urls]
Homepage = "https://neuromodulation.github.io/py_neuromodulation/"
Documentation = "https://neuromodulation.github.io/py_neuromodulation/"
Repository = "https://github.com/neuromodulation/py_neuromodulation"
Issues = "https://github.com/neuromodulation/py_neuromodulation/issues"

[tool.rye]
dev-dependencies = ["py-neuromodulation[dev]"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# E402: module level import not at top of file, but we need to st PYNM_DIR and MNE_LSL_LIB first
"**/__init__.py" = ["E402", "F401", "F403"]
