[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "py_neuromodulation"
version = "0.0.6"
authors = [{ name = "Timon Merk", email = "timon.merk@charite.de" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Real-time analysis of intracranial neurophysiology recordings."
keywords = [
  "real-time",
  "eeg",
  "ieeg",
  "dbs",
  "ecog",
  "electrocorticography",
  "deep-brain-stimulation",
  "machine-learning",
]
license = { file = "LICENSE" }
maintainers = [{ name = "Timon Merk" }]
readme = "README.rst"
requires-python = ">= 3.11"

dependencies = [
  "mne",
  "fooof",
  "matplotlib>=3.9.0",
  "mne-bids >= 0.8",
  "mne-connectivity",
  "mrmr_selection",
  "nolds",
  "numpy >= 1.21.2",
  "pandas >= 2.0.0",
  "scikit-learn >= 0.24.2",
  "scikit-optimize",
  "scipy >= 1.7.1",
  "pybispectra >= 1.2.0",
  "pyparrm",
  "pyarrow>=14.0.2",
  "joblib>=1.3.2",
  "mne-lsl>=1.2.0",
  "pyqt5",
  "pydantic>=2.7.3",
  "seaborn >= 0.11",
]

[project.optional-dependencies]
test = ["pytest>=8.0.2", "pytest-xdist"]
dev = ["ruff", "pytest>=8.0.2", "pytest-cov", "pytest-sugar", "notebook"]
docs = [
  "py-neuromodulation[dev]",
  "sphinx",
  "recommonmark",
  "sphinx",
  "numpydoc",
  "sphinx-gallery",
  "pydata-sphinx-theme",
  "sphinx_togglebutton",
]

[project.urls]
bugtracker = "https://github.com/neuromodulation/py_neuromodulation/issues"
repository = "https://github.com/neuromodulation/py_neuromodulation"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# E402: module level import not at top of file, but we need to st PYNM_DIR and MNE_LSL_LIB first
"**/__init__.py" = ["E402", "F401", "F403"]
