[pycodestyle]
max-line-length = 80

[metadata]
description-file = README.md
name = py_neuromodulation
version = 0.0.1

[options]
packages = py_neuromodulation
install_requires =
    importlib; python_version == "3.9"
    filterpy>=1.4.5
    matplotlib>=3.3.4
    mne>=0.23.0
    mne-bids>=0.8
    numpy>=1.21.2
    pandas>=1.2.2
    pip
    scikit-learn>=0.24.2
    scikit-optimize
    scipy>=1.7.1
    seaborn>=0.11
    imbalanced-learn
    xgboost
    ipykernel
